Dark mode fix

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -1,4 +1,4 @@
-// @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   html, body, .sheets, footer {
     background: black;
   }
@@ -42,3 +42,4 @@
   footer a {
     color: #3a3836;
   }
+}
